feature: validCredentials, attempts, deactivate tests