@@ -30,6 +30,7 @@
 		<springdoc.version>2.8.5</springdoc.version>
 		<bucket4j.version>8.10.1</bucket4j.version>
 		<jacoco.version>0.8.11</jacoco.version>
+		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -273,6 +274,15 @@
 						</path>
 
 					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire-plugin.version}</version>
+				<configuration>
+					<argLine>-XX:+EnableDynamicAgentLoading</argLine>
 				</configuration>
 			</plugin>
 
